tests/parsing/smtlib/v2.6/errors/044_application_empty_args_1.expected
File "tests/parsing/smtlib/v2.6/errors/044_application_empty_args_1.smt2", line 2, character 13-14:
2 | (assert (foo _))
                 ^
Error while parsing a function application, read the reserved word '_',
      but expected a term as argument; note that keywords and reserved words
      (such as '_', 'as', ...) are not terms, and thus are not allowed here.
